# fileio_wrapper

./: .gitignore  LICENSE  README.MD  fileio_wrapper.py  requirements-test.txt  setup.cfg  tests.py
.github/workflows/: python-test.yml
src/fileio_wrapper/: __init__.py
tests/: test_fileio_wrapper.py
