[metadata]
name = fileio-wrapper
version = attr: fileio_wrapper.__version__
author = Chumicat
author_email = russell57260620@gmail.com
description = Python wrapper for the online file sharing service file.io
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/Chumicat/fileio_wrapper
keywords = API wrapper, upload, download, cloud storage, file.io, file-io
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
package_dir=
    =src
packages = find:
python_requires = >=3.8
install_requires =
    requests
tests_require =
    ratelimit
setup_requires =
    setuptools >= 40.8.0
    wheel
    twine

[options.packages.find]
where = src
exclude = tests

[options.package_data]
fileio_wrapper =
    README.MD
    LICENSE
